# SDX

./: .gitignore  CMakeLists.txt  build.bat  build.sh  compile_shaders.bat  compile_shaders.sh  hacks.h  readme.md  sparse_set.c  sparse_set.h
shaders/: blinnphong_alphatest.frag.hlsl  blinnphong_unanimated.vert.hlsl  bloom_downsample.comp.hlsl  bloom_threshold.comp.hlsl  bloom_upsample.comp.hlsl  bone_animated.vert.hlsl  compute_storage_buffers.txt  fog.frag.hlsl  fullscreen_quad.vert.hlsl  fullscreen_quad_flipped.vert.hlsl  gaussian_blur.comp.hlsl  pbr.hlsl  pbr_alphatest.frag.hlsl  pbr_animated.vert.hlsl  pbr_unanimated.vert.hlsl  phong_alphatest.frag.hlsl  prepass.frag.hlsl  prepass_downsample.comp.hlsl  prepass_unanimated.vert.hlsl  shader.vert.hlsl  shadow.frag.hlsl  shadow_unanimated.vert.hlsl  sprite.vert.hlsl  ssao.frag.hlsl  ssao_upsample.comp.hlsl  swapchain.frag.hlsl  text.frag.hlsl  text.vert.hlsl  unanimated.frag.hlsl  unanimated_phong.vert.hlsl  unlit_alphatest.frag.hlsl  unlit_unanimated.vert.hlsl
src/: array.c  array.h  audio.c  audio.h  camera.c  camera.h  events.c  events.h  globals.c  globals.h  gltf.c  gltf.h  hash.c  hash.h  helper.c  helper.h  init.c  init.h  json.c  json.h  lights.c  lights.h  main.c  model.c  model.h  physics.c  physics.h  pipeline.c  pipeline.h  player.c  player.h  render.c  render.h  sampler.c  sampler.h  shader.c  shader.h  sprite.c  sprite.h  text.c  (+5 more)
